--- a/css/stile.css
+++ b/css/stile.css
@@ -12,14 +12,12 @@ body{
 }
 
 .green{
-    width: 100%;
     height: 7rem;
     background-color: rgb(0, 150, 136);
 }
 
 #container{
     width: 1000px;
-    height: 670px;
     display: flex;
     background-color: white;
     position: absolute;
@@ -126,16 +124,19 @@ body{
     padding: 0.4rem;
 }
 
-.second-box{
-    width: 65%;
-    height: 100%;
-    background-color: red;
+.users-list{
+    overflow-y: scroll;
 }
 
 .user{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5px;
+    padding-bottom: 8px;
+    border-top: 1px solid lightgrey;
+}
+
+.user:hover{
+    background-color: lightgray;
 }
 
 .user img{
@@ -160,4 +161,9 @@ body{
     margin-right: 10px;
     color: grey;
     font-size: 80%;
+}
+
+.second-box{
+    width: 65%;
+    height: 100%;
 }
