--- a/css/stile.css
+++ b/css/stile.css
@@ -18,6 +18,7 @@ body{
 
 #container{
     width: 1000px;
+    height: 650px;
     display: flex;
     background-color: white;
     position: absolute;
@@ -127,7 +128,7 @@ body{
 }
 
 .users-list{
-    max-height: 500px;
+    max-height: 485px;
     overflow-y: scroll;
 }
 
@@ -172,4 +173,16 @@ body{
 .second-box{
     width: 65%;
     height: 100%;
+    background-image: url(../img/mine.jpg);
+    position: relative;
+}
+
+.message-text{
+    height: 3.5rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-left: 1px solid lightgrey;
+    background-color: rgb(234, 234, 234);
 }
