--- a/css/stile.css
+++ b/css/stile.css
@@ -179,10 +179,28 @@ body{
 
 .message-text{
     height: 3.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
+    padding: 0 1.5rem;
     border-left: 1px solid lightgrey;
     background-color: rgb(234, 234, 234);
+}
+
+#write-message{
+    padding: 0.8rem;
+    flex-grow: 1;
+    margin: 0 1.5rem;
+    border: none;
+    border-radius: 10px;
+}
+
+.message-text i{
+    color: rgb(75, 75, 75);
+    font-size: 120%;
+    cursor: pointer;
 }
