--- a/css/stile.css
+++ b/css/stile.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    font-family: 'Roboto', sans-serif;
+}
+
 body{
     width: 100%;
     height: 100vh;
@@ -93,6 +97,7 @@ body{
 .text-notification div:last-child{
     color: grey;
     text-decoration: underline;
+    font-size: 80%;
 }
 
 .text-notification{
@@ -160,7 +165,7 @@ body{
 }
 
 .text-users div:last-child{
-    font-size: 80%;
+    font-size: 70%;
     color: gray;
 }
 
@@ -179,32 +184,46 @@ body{
 
 .texts{
     height: calc(100% - 3.5rem - 57.59px);
+    padding-top: 3rem;
     overflow-y: scroll;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.friend-text{
-    width: 30%;
-    height: 100%;
-    background-color: red;
-    text-align: center;
+.area-text{
+    width: 35%;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
-.my-text{
-    width: 30%;
-    height: 100%;
-    background-color: blue;
-    text-align: center;
+.left{
+  margin-top: calc(40.09px *2 + 20px);
 }
 
 .single-text{
     background-color: white;
-    padding: 0.5rem;
+    padding: 0.8rem;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    font-size: 80%;
+    position: relative;
 }
 
+.single-text div:last-child{
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-size: 70%;
+    color: grey;
+}
 
+.me{
+    background-color: lightgreen;
+}
 
+.me i{
+    color: red;
+}
 
 .message-text{
     height: 3.5rem;
