--- a/css/stile.css
+++ b/css/stile.css
@@ -24,7 +24,6 @@ body{
     width: 70%;
     min-width: 900px;
     height: 90%;
-    /*height: 650px;*/
     display: flex;
     background-color: white;
     position: absolute;
@@ -73,7 +72,7 @@ body{
 .settings-first-box i:hover{
     color: rgb(75, 75, 75);
     cursor: pointer;
-}
+} 
 
 .notification{
     background-color: rgb(142, 218, 251);
@@ -135,7 +134,6 @@ body{
 }
 
 .users-list{
-    /*max-height: 485px;*/
     max-height: 74%;
     overflow-y: scroll;
 }
@@ -163,12 +161,6 @@ body{
     display: flex;
 }
 
-/*
-.text-users div:first-child{
-    font-size: 90%;
-}
-*/
-
 .text-users div:last-child{
     font-size: 70%;
     color: gray;
@@ -192,29 +184,37 @@ body{
     padding-top: 3rem;
     padding-left: 3rem;
     padding-right: 3rem;
-    justify-content: space-between;
     overflow-y: scroll;
-}
-
-.message-friend{
-    display: flex;
-    flex-direction: column;
-}
-
-.message-user{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
+.message-friend{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
 .single-text{
     width: 230px;
-    background-color: white;
     padding: 0.8rem;
     margin-bottom: 10px;
     border-radius: 5px;
     font-size: 80%;
     position: relative;
+    background-color: rgb(213, 249, 186);
+}
+
+.single-text-friend{
+    width: 230px;
+    padding: 0.8rem;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    font-size: 80%;
+    position: relative;
+    background-color: white;
 }
 
 .single-text div:last-child{
@@ -223,10 +223,6 @@ body{
     right: 5px;
     font-size: 70%;
     color: grey;
-}
-
-.me{
-    background-color: rgb(213, 249, 186);
 }
 
 .message-text{
