--- a/css/stile.css
+++ b/css/stile.css
@@ -185,7 +185,18 @@ body{
     padding-left: 3rem;
     padding-right: 3rem;
     overflow-y: scroll;
-    position: relative;
+    position: relative; 
+}
+
+.me{
+    background-color: rgb(213, 249, 186);
+}
+
+.friend{
+    background-color: white;
+}
+
+.message-user{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -194,7 +205,7 @@ body{
 .message-friend{
     display: flex;
     flex-direction: column;
-    background-color: white;
+
 }
 
 .single-text{
@@ -204,7 +215,6 @@ body{
     border-radius: 5px;
     font-size: 80%;
     position: relative;
-    background-color: rgb(213, 249, 186);
 }
 
 .single-text-friend{
